<resources>
    <string name="app_name">Toodoo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>


    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="forgot_password_text">Please enter your registered email address below and we will send you password reset instructions</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="login_text">Already have an account? Login!</string>
    <string name="add_item">Add New Item</string>
    <string name="action_account">Account Info</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_recycler">RecyclerActivity</string>


    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed to detect items</string>
    <string name="no_camera_permission">Toodoo cannot run because it does not have the camera permission.  Toodoo will now exit.</string>
    <string name="low_storage_error">OCR dependencies for Tooodoo Vision cannot be downloaded due to low device storage</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

    <string name="task">Task</string>
    <string name="tap_recognized_text">Allow camera to focus on text, then tap on the recognized text block</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

</resources>
