<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_register"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top|center"
    tools:context="com.olayinkapeter.toodoo.auth.SignUp">


    <EditText android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:theme="@style/MyEditTextTheme"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:hint="Name" >
        <requestFocus>

        </requestFocus>
    </EditText>

    <EditText android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:theme="@style/MyEditTextTheme"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >
    </EditText>

    <EditText android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:theme="@style/MyEditTextTheme"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <Button android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn"
        android:text="@string/sign_up_button_label"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15sp"/>

    <TextView android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        android:text="@string/login_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:layout_width="100dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:layout_height="1dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="or"/>

        <View
            android:layout_width="100dp"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:layout_height="1dp"/>

    </LinearLayout>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    </com.google.android.gms.common.SignInButton>

</LinearLayout>
